# nwt

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
nwt/: __init__.py  __main__.py  bible.py  cli.py  config.py  errors.py
nwt/cmd/: __init__.py  inputparser.py  outputparser.py
nwt/setup/: download.py  install.py
nwt/utils/: __init__.py  color_util.py  os_util.py
tests/: test_nwt.py
