[tool.poetry]
name = "nwt"
version = "0.1.0"
description = "Bible new world translation in cli"
authors = ["Unviray <unviray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pylev = "^1.3.0"
prompt-toolkit = "^3.0.8"
tinydb = "^4.3.0"
toml = "^0.10.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
watchdog = "^0.10.4"
flake8 = "^3.8.4"
icecream = "^2.0.0"
pylint = "^2.6.0"
tox = "^3.20.1"
pytest = "^6.1.2"
pytest-runner = "^5.2"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
nwt = 'nwt.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
